
syntax = "proto3";

package user;

option go_package = "./proto/user";

// User service definition
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

// Messages for User service
message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
  string status = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
  string error = 2;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
  string phone = 5;
}

message CreateUserResponse {
  User user = 1;
  string error = 2;
}

message UpdateUserRequest {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
}

message UpdateUserResponse {
  User user = 1;
  string error = 2;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string error = 2;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  string error = 3;
}